--- a/PersonalSite/wwwroot/css/app.css
+++ b/PersonalSite/wwwroot/css/app.css
@@ -33,7 +33,32 @@ body {
   font-size: 12pt !important;
   margin-top: 25px;
   line-height: 28px;
-  height: 10vh;
+  height: 8rem;
+}
+
+  .card .card-text .tags {
+    height: 6rem
+  }
+
+@media only screen and (max-width: 768px)
+{
+  .card .card-text p {
+    height: 10rem;
+  }
+
+  .card .card-text .tags {
+    height: 6rem;
+  }
+}
+
+@media (max-width: 991.98px) {
+  .card .card-text p {
+    height: 15rem;
+  }
+
+  .card .card-text .tags {
+    height: 13rem;
+  }
 }
 
 @media (max-width: 991.98px) {
