--- a/PersonalSite/wwwroot/css/blog.css
+++ b/PersonalSite/wwwroot/css/blog.css
@@ -55,8 +55,8 @@ article h4 {
 
     font-style: normal;
     font-weight: 600;
-    /* letter-spacing: 0.06px; */
-    line-height: 28px;
+    /* letter-spacing: 0.06px; 
+    line-height: 28px;*/
     word-break: break-word;
 }
 
@@ -179,8 +179,8 @@ article p+img:not(.cover), p+a img:not(.cover) {
         display: block;
         font-size: 16px;
         font-weight: 400;
-         /* letter-spacing: 0.06px; */
-        line-height: 28px;
+         /* letter-spacing: 0.06px;
+        line-height: 28px; */
     }
 
     article p+p {
