--- a/PersonalSite/Pages/Index.razor
+++ b/PersonalSite/Pages/Index.razor
@@ -15,6 +15,7 @@
     height: 100%;
     position: absolute;
     width: 100%;
+    -webkit-backdrop-filter: brightness(@BackdropBrightness.ToString(CultureInfo.InvariantCulture));
     backdrop-filter: brightness(@BackdropBrightness.ToString(CultureInfo.InvariantCulture));"></div>
 
     <div class="text-center w-100 text-light caption" style="text-shadow: 0 .05rem .1rem rgba(0, 0, 0, .5);">
