--- a/PersonalSite/Pages/Portfolio/PortfolioPage.razor
+++ b/PersonalSite/Pages/Portfolio/PortfolioPage.razor
@@ -10,7 +10,7 @@
 }
 else
 {
-    <article>
+    <section>
     <h1>Portfolio</h1>
 
     <div class="mt-4">
@@ -19,13 +19,13 @@ else
                 href="https://youtube.com/playlist?list=PLLBU--06ftFqPiAwkg3VKa2fIEhNu7J4L">playlist</a> on YouTube.</p>
     </div>
 
-    <div class="mt-5 row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
+    <div class="mt-5 row row-cols-1 row-cols-sm-1 row-cols-md-2 row-cols-lg-3 g-3">
         @foreach (var project in projects.ToList())
             {
                 <ProjectView Project="project" />
             }
         </div>
-    </article>
+    </section>
 }
 
 @code {
