--- a/PersonalSite/Pages/Portfolio/ProjectView.razor
+++ b/PersonalSite/Pages/Portfolio/ProjectView.razor
@@ -67,7 +67,7 @@
                             {
                                 icon = "fas fa-link";
                             }
-                            <a class="btn btn-sm btn-outline-secondary mt-2 me-2" alt="@link.Name" href="@link.Url"
+                            <a class="btn btn-sm btn-outline-secondary ms-2" alt="@link.Name" href="@link.Url"
                                 target="_blank"><i class="@icon fa-lg"></i></a>
                         }
                     </div>
