--- a/PersonalSite/Pages/Index.razor
+++ b/PersonalSite/Pages/Index.razor
@@ -31,9 +31,9 @@
 
 </div>
 
-<article id="who-am-i" class="context" style="padding-top: 0 !important; text-align:center;padding:50px 15px;text-align: justify;">
+<section id="who-am-i" class="context" style="padding-top: 0 !important; text-align:center;padding:50px 15px;text-align: justify;">
     <div class="container">
-        <div class="col mx-auto" style="max-width: 640px">
+        <div class="col mx-auto mt-4" style="max-width: 640px">
               <h3 style="text-align:center;">Who am I?</h3>
              <p>I'm a Software developer, based in <a target="_blank" href="https://www.google.se/maps/place/Malmö/@@55.5702455,12.9457618,12z/data=!3m1!4b1!4m5!3m4!1s0x465305a574c491ff:0xd3a905dfbd4888e5!8m2!3d55.604981!4d13.003822?hl=en">Malmö, Sweden</a>.</p>
 
@@ -49,7 +49,7 @@
         </div>
 
     </div>
-</article>
+</section>
 
   <footer class="pt-3 pb-3 px-4 my-5 mx-auto w-100 container text-center">
       <small class="text-muted">© @DateTime.Now.Year Marina Sundström | Built with .NET & Blazor - Hosted by GitHub Pages</small>
