--- a/PersonalSite/Pages/Index.razor
+++ b/PersonalSite/Pages/Index.razor
@@ -117,7 +117,7 @@
     }
 
     .bgimg-1 {
-        background-image: url('/assets/nordellen.jpeg');
+        background-image: url('/assets/nordellen.webp');
         min-height: 100%;
     }
 
