Revert "Update portfolio design"
This reverts commit 1c3b712c852124be90c305b41c4ffca6bfdf73eb.

--- a/PersonalSite/Pages/Portfolio/PortfolioPage.razor
+++ b/PersonalSite/Pages/Portfolio/PortfolioPage.razor
@@ -19,7 +19,7 @@ else
                 href="https://youtube.com/playlist?list=PLLBU--06ftFqPiAwkg3VKa2fIEhNu7J4L">playlist</a> on YouTube.</p>
     </div>
 
-    <div class="mt-5 row row-cols-1 row-cols-sm-1 row-cols-md-2 row-cols-lg-3 gx-5">
+    <div class="mt-5 row row-cols-1 row-cols-sm-1 row-cols-md-2 row-cols-lg-3 g-3">
         @foreach (var project in projects.ToList())
             {
                 <ProjectView Project="project" />
