--- a/PersonalSite/Pages/Portfolio/ProjectView.razor
+++ b/PersonalSite/Pages/Portfolio/ProjectView.razor
@@ -1,7 +1,7 @@
 @using PersonalSite.Markdown
 
-<div class="col card-group mb-4">
-    <div class="card">
+<div class="col card-group">
+    <div class="card shadow">
 
         <a href="@Project.Image" target="_blank">
             <img class="bd-placeholder-img card-img-top mt-3"
@@ -67,7 +67,7 @@
                             {
                                 icon = "fas fa-link";
                             }
-                            <a class="btn btn-sm ms-2" style="color: #6c757d;" alt="@link.Name" href="@link.Url"
+                            <a class="btn btn-sm btn-outline-secondary ms-2" alt="@link.Name" href="@link.Url"
                                 target="_blank"><i class="@icon fa-lg"></i></a>
                         }
                     </div>
