Update Portfolio layout and Card design

--- a/PersonalSite/Pages/Portfolio/ProjectView.razor
+++ b/PersonalSite/Pages/Portfolio/ProjectView.razor
@@ -9,7 +9,7 @@
         </a>
         <div class="card-body mt-2">
             <h5 class="card-title">@Project.Name</h5>
-            <div class="card-text">
+            <div class="card-text small">
                 <p class="text-muted mt-1" style="height: auto;"> @if (Project.For is not null)
                     {
                         @Project.For
