Add "Blazor Web Apps in ASP.NET Core 8"

--- a/PersonalSite/Shared/MainLayout.razor
+++ b/PersonalSite/Shared/MainLayout.razor
@@ -1,6 +1,6 @@
 @inherits LayoutComponentBase
 
-<div class="container d-flex w-100 h-100 p-3 mx-auto flex-column" style="padding-top: 110px !important;">
+<div class="container d-flex w-100 h-100 mx-auto flex-column" style="padding-top: 110px !important;">
   <header>
     <div>
       <NavMenu />
