--- a/PersonalSite/wwwroot/css/blog.css
+++ b/PersonalSite/wwwroot/css/blog.css
@@ -51,7 +51,7 @@ article h4 {
     /* margin-bottom: -7.14px; */
     margin-left: 0;
     margin-right: 0;
-    margin-top: 62.08px;
+    margin-top: 42.08px;
 
     font-style: normal;
     font-weight: 600;
@@ -81,11 +81,11 @@ article ol {
     margin-right: 0;
     margin-top: 20px;
     /* font-family: var(--font2); */
-    font-size: 18px; /* 20px; */
+    font-size: 16px; /* 20px; */
     font-style: normal;
     font-weight: 400;
      /* letter-spacing: 0.06px; */
-    line-height: 34px;
+    line-height: 2em;
     word-break: break-word;
 }
 
@@ -104,7 +104,7 @@ article.text ol {
     article.text dl dd,
     article.text ul,
     article.text ol {
-        font-size: 18px !important;
+        font-size: 16px !important;
     }
 }
 
