--- a/PersonalSite/Pages/Resume/ResumePage.razor
+++ b/PersonalSite/Pages/Resume/ResumePage.razor
@@ -19,7 +19,7 @@
         }
         else 
         {
-        <section class="mb-5">
+        <section class="mb-4 mt-4">
             <PersonalSite.Markdown.MarkdownView Content="@objectiveContent" />
         </section>
 
