--- a/PersonalSite/Pages/Index.razor
+++ b/PersonalSite/Pages/Index.razor
@@ -31,13 +31,16 @@
 
 </div>
 
-<section id="who-am-i" class="context" style="padding-top: 0 !important; text-align:center;padding:50px 15px;text-align: justify;">
+<section id="who-am-i" class="context" style="padding-top: 0 !important; padding:50px 15px;text-align: start;">
     <div class="container">
         <div class="col mx-auto mt-4" style="max-width: 640px">
               <h3 style="text-align:center;">Who am I?</h3>
              <p>I'm a Software developer, based in <a target="_blank" href="https://www.google.se/maps/place/Malmö/@@55.5702455,12.9457618,12z/data=!3m1!4b1!4m5!3m4!1s0x465305a574c491ff:0xd3a905dfbd4888e5!8m2!3d55.604981!4d13.003822?hl=en">Malmö, Sweden</a>.</p>
 
-            <p>I have been doing programming since 2007. Ever since, in my career and in my free time, I have been learning a lot about software engineering and all the different aspects involved in building software, not just the technical but also the organizational side.</p>
+            <p>I have been doing programming since 2007.</p> 
+            
+            <p>Ever since, in my career and in my free time,
+                I have been learning a lot about software engineering and all the different aspects involved in building software, not just the technical but also the organizational side.</p>
        
             <p>I have mainly worked with C#/.NET, but also Web development using JavaScript and frameworks like React.</p>
 
