--- a/PersonalSite/wwwroot/css/app.css
+++ b/PersonalSite/wwwroot/css/app.css
@@ -15,7 +15,8 @@ body {
   height: 100%;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
-  font-family: var(--font1);
+  font-family: 'Roboto', sans-serif;
+  scroll-behavior: smooth;
 
   overflow-x: hidden;
   /* Prevent scroll on narrow devices */
@@ -235,7 +236,7 @@ header.main {
 .badge.tag {
   background-color: rgb(231 231 231);
   color: #4b4b4b;
-  font-weight: 600;
+  font-weight: 540;
 }
 
 .badge.comment-badge {
