--- a/PersonalSite/wwwroot/css/app.dark.css
+++ b/PersonalSite/wwwroot/css/app.dark.css
@@ -51,6 +51,7 @@
     .dark .badge.tag {
         background-color: #596883 !important;
         color: #ffffffab !important;
+        font-weight: 460;
     }
 
     .dark .badge.comment-badge {
