--- a/PersonalSite/wwwroot/css/blog.css
+++ b/PersonalSite/wwwroot/css/blog.css
@@ -17,8 +17,7 @@ article .outer {
 
 article .inner,
 article.inner {
-    max-width: 720px;
-    /* 720px; 692px; */
+    max-width: 48rem !important;
     margin-right: auto;
     margin-left: auto;
 }
@@ -144,7 +143,7 @@ article p+img:not(.cover), p+a img:not(.cover) {
     article p+h2,
     article p+h3,
     article p+h4 {
-        margin-top: 42.08px;
+        margin-top: 37px;
     }
 
     article p,
@@ -157,7 +156,7 @@ article p+img:not(.cover), p+a img:not(.cover) {
     }
 
     article p+p {
-        margin-top: 30px;
+        /* margin-top: 30px; */
     }
 
     article p+ul {
