--- a/PersonalSite/wwwroot/css/syntax.css
+++ b/PersonalSite/wwwroot/css/syntax.css
@@ -9,7 +9,7 @@ code, pre {
 
 code.hljs {
     padding: 0rem;
-    /* border: 1px solid rgb(199 199 199 / 70%); */
+    border: 1px solid rgb(199 199 199 / 70%);
     border-radius: 10px;
     overflow: auto;
 
