Update design layout

--- a/PersonalSite/Pages/Portfolio/ProjectView.razor
+++ b/PersonalSite/Pages/Portfolio/ProjectView.razor
@@ -1,7 +1,7 @@
 @using PersonalSite.Markdown
 
 <div class="col card-group">
-    <div class="card shadow">
+    <div class="card shadow-sm">
 
         <a href="@Project.Image" target="_blank">
             <img class="bd-placeholder-img card-img-top mt-3"
