--- a/PersonalSite/Pages/PostsPage.razor
+++ b/PersonalSite/Pages/PostsPage.razor
@@ -8,7 +8,7 @@
     <div class="col-sm-12 col-md-8">
         <PageTitle>Articles - Marina Sundström</PageTitle>
 
-        <h1 class="post-title mb-4 mb-md-5">Articles</h1>
+        <h1>Articles</h1>
 
         @if (posts is null)
         {
