--- a/PersonalSite/Shared/CoverLayout.razor
+++ b/PersonalSite/Shared/CoverLayout.razor
@@ -2,10 +2,10 @@
 
 <header class="mb-auto">
     <div>
-        <NavMenu Transparent="true" />
+        <NavMenu />
     </div>
 </header>
 
-<main class="w-100">
+<main class="w-100" style="padding-top: 58px">
     @Body
 </main>
