--- a/PersonalSite/Pages/Resume/ExperienceList.razor
+++ b/PersonalSite/Pages/Resume/ExperienceList.razor
@@ -8,7 +8,7 @@
     {
         var experience = experiences.First();
 
-        <div class="card shadow mb-4" style="page-break-inside: avoid;">
+        <div class="card shadow-sm mb-4" style="page-break-inside: avoid;">
             <div class="card-body">
                 <div class="d-flex">
                     <div class="col-logo">
@@ -37,7 +37,7 @@
         var lastExperience = experiences.First();
         var firstExperience = experiences.Last();
 
-        <div class="card shadow mb-4" style="break-inside: avoid-page;">
+        <div class="card shadow-sm mb-4" style="break-inside: avoid-page;">
             <div class="card-body">
                 <div class="d-flex">
     <div class="col-logo">
