--- a/PersonalSite/Pages/Resume/ExperienceView.razor
+++ b/PersonalSite/Pages/Resume/ExperienceView.razor
@@ -77,7 +77,7 @@ else
             <dd>
                 @foreach (var skillName in experience.Skills)
                 {
-                    <div class="badge rounded-pill tag me-1 mb-1 text-decoration-none">
+                    <div class="badge mini rounded-pill tag me-1 mb-1 text-decoration-none">
                         @skillName
                     </div>
                 }
