--- a/PersonalSite/Shared/NavMenu.razor
+++ b/PersonalSite/Shared/NavMenu.razor
@@ -1,132 +1,87 @@
-@using PersonalSite.Theming;
-@inject IThemeManager ThemeManager
+﻿@using System.Runtime.InteropServices.JavaScript
 
-@*
-<nav class="nav nav-masthead justify-content-center float-md-end">
-                <NavLink class="nav-link" href="about">About</NavLink>
-                <NavLink class="nav-link" href="blog">Blog</NavLink>
-                <NavLink class="nav-link" href="resume">Resumé</NavLink>
-                <NavLink class="nav-link" href="portfolio">Portfolio</NavLink>
-
-      </nav> *@
-
-<nav class="navbar navbar-expand-lg @(!Transparent ? "bg-brand" : null) navbar-dark fixed-top px-3">
-    <div class="container">
+<header class="navbar navbar-expand-lg fixed-top navbar-dark bg-brand">
+    <nav class="container px-4 px-md-3 flex-wrap flex-md-nowrap" aria-label="Main navigation">
         <NavLink class="navbar-brand mr-auto mr-lg-0" href="" Match=@NavLinkMatch.All>
-        <img src="/images/profile.jpeg" alt="Profile Image" class="rounded-circle profile"
-            style="margin-right: 10px; height: 32px; font-weight: 700" />
-        Marina Sundström</NavLink>
-    <button class="navbar-toggler p-0 border-0" type="button" data-toggle="offcanvas" @onclick="ToggleOpen">
-        <span class="navbar-toggler-icon"></span>
-    </button>
+            <img src="/images/profile.jpeg" alt="Profile Image" class="rounded-circle profile"
+                style="margin-right: 10px; height: 32px; font-weight: 700" />
+            Marina Sundström
+        </NavLink>
+        <button class="navbar-toggler p-0 border-0" type="button" id="navbarSideCollapse"
+            aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
 
-    <div class="navbar-collapse offcanvas-collapse @(isOpen ? "open" : null)" id="navbarsExampleDefault" @onclick="ToggleOpen">
-        <ul class="navbar-nav mr-auto">
-            <li class="nav-item active">
-                <NavLink class="nav-link" href="" Match="NavLinkMatch.All">Home</NavLink>
-            </li>
-            <li class="nav-item active">
-                <NavLink class="nav-link" href="/#who-am-i">About me</NavLink>
-            </li>
-            <li class="nav-item">
-                <NavLink class="nav-link" href="articles">Articles</NavLink>
-            </li>
-            <li class="nav-item">
-                <NavLink class="nav-link" href="resume">Resumé</NavLink>
-            </li>
-            <li class="nav-item">
-                <NavLink class="nav-link" href="portfolio">Portfolio</NavLink>
-            </li>
-        </ul>
-        <ol class="navbar-nav flex-row flex-wrap ms-md-auto list-inline list-unstyled" style="margin: 0;">
-            <li class="nav-item list-inline-item">
-                <a class="nav-link menu-link me-0 py-2 text-decoration-none text-uppercase"
-                    href="https://github.com/marinasundstrom" title="GitHub" target="_blank">
-                    <i class="fab fa-2x fa-github"></i>
-                </a>
-            </li>
+        <div class="navbar-collapse offcanvas-collapse" id="navbarsExampleDefault">
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                <li class="nav-item active">
+                    <NavLink class="nav-link" href="" Match="NavLinkMatch.All">Home</NavLink>
+                </li>
+                <li class="nav-item active">
+                    <NavLink class="nav-link" href="/#who-am-i">About me</NavLink>
+                </li>
+                <li class="nav-item">
+                    <NavLink class="nav-link" href="articles">Articles</NavLink>
+                </li>
+                <li class="nav-item">
+                    <NavLink class="nav-link" href="resume">Resumé</NavLink>
+                </li>
+                <li class="nav-item">
+                    <NavLink class="nav-link" href="portfolio">Portfolio</NavLink>
+                </li>
+            </ul>
+            <hr class="d-md-none text-white-50">
+            <ul class="navbar-nav flex-row flex-wrap ms-md-auto">
+                <ThemeSelector />
+                <li class="nav-item list-inline-item">
+                    <a class="nav-link menu-link me-0 py-2 text-decoration-none text-uppercase"
+                        href="https://github.com/marinasundstrom" title="GitHub" target="_blank">
+                        <i class="fab fa-github"></i>
+                    </a>
+                </li>
 
-            <li class="nav-item list-inline-item">
-                <a class="nav-link menu-link me-0 py-2 text-decoration-none text-uppercase"
-                    href="https://www.youtube.com/channel/UCVdav9wE4kmtiEuk1_vG2_g" target="_blank">
-                    <i class="fab fa-2x fa-youtube"></i>
-                </a>
-            </li>
+                <li class="nav-item list-inline-item">
+                    <a class="nav-link menu-link me-0 py-2 text-decoration-none text-uppercase"
+                        href="https://www.youtube.com/channel/UCVdav9wE4kmtiEuk1_vG2_g" target="_blank">
+                        <i class="fab fa-youtube"></i>
+                    </a>
+                </li>
 
-            <li class="nav-item list-inline-item">
-                <a class="nav-link menu-link me-0 py-2 text-decoration-none text-uppercase"
-                    href="https://twitter.com/marna_li" title="Twitter" target="_blank">
-                    <i class="fab fa-2x fa-twitter"></i>
-                </a>
-            </li>
+                <li class="nav-item list-inline-item">
+                    <a class="nav-link menu-link me-0 py-2 text-decoration-none text-uppercase"
+                        href="https://twitter.com/marna_li" title="X" target="_blank">
+                        <i class="fab fa-x-twitter"></i>
+                    </a>
+                </li>
 
-            <li class="nav-item list-inline-item">
-                <a class="nav-link menu-link me-0 py-2 text-decoration-none text-uppercase"
-                    href="https://www.linkedin.com/in/marinasundstrom" title="LinkedIn" target="_blank">
-                    <i class="fab fa-2x fa-linkedin"></i>
-                </a>
-            </li>
-
-            <li class="nav-item vr"></li>
-
-            <li class="nav-item list-inline-item dropdown">
-                <a class="nav-link menu-link me-0 py-2 dropdown-toggle" @onclick:preventDefault @onclick:stopPropagation href="#" id="navbarDarkDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                    @switch(ThemeManager.CurrentColorScheme) 
-                    {
-                        case ColorScheme.Light:
-                            <i class="fas fa-2x fa-sun"></i>
-                            break;
-
-                        case ColorScheme.Dark:
-                            <i class="fas fa-2x fa-moon"></i>
-                            break;
-                    }
-                </a>
-                <ul class="dropdown-menu dropdown-menu-dark" aria-labelledby="navbarDarkDropdownMenuLink">
-                    <li>
-                        <a class="dropdown-item" href="#" @onclick:preventDefault @onclick="() => ThemeManager.SetPreferredColorScheme(ColorScheme.Light)"><i class="fas fa-2x fa-sun"></i>
-                        @if(ThemeManager.PreferredColorScheme == ColorScheme.Light) 
-                        {
-                            <span class="ms-2 fs-5">•</span>
-                        }
-                        </a>
-                    </li>
-                    <li>
-                        <a class="dropdown-item" href="#" @onclick:preventDefault @onclick="() => ThemeManager.SetPreferredColorScheme(ColorScheme.Dark)"><i class="fas fa-2x fa-moon"></i>
-                        @if(ThemeManager.PreferredColorScheme == ColorScheme.Dark) 
-                        {
-                            <span class="ms-2 fs-5">•</span>
-                        }
-                        </a>
-                    </li>
-                    <li>
-                        <a class="dropdown-item" href="#" @onclick:preventDefault @onclick="() => ThemeManager.UseSystemScheme()"><i class="fas fa-2x fa-cog"></i>
-                        @if(ThemeManager.PreferredColorScheme is null) 
-                        {
-                            <span class="ms-2 fs-5">•</span>
-                        }
-                        </a>
-                    </li>
-                </ul>
-            </li>
-        </ol>
-    </div>
-    </div>
-</nav>
+                <li class="nav-item list-inline-item">
+                    <a class="nav-link menu-link me-0 py-2 text-decoration-none text-uppercase"
+                        href="https://www.linkedin.com/in/marinasundstrom" title="LinkedIn" target="_blank">
+                        <i class="fab fa-linkedin"></i>
+                    </a>
+                </li>
+            </ul>
+        </div>
+    </nav>
+</header>
 
 @code {
-    bool isOpen = false;
+    private string? message;
 
-    void ToggleOpen() => isOpen = !isOpen;
-
-    protected override void OnInitialized()
+    protected override async Task OnInitializedAsync()
     {
-        ThemeManager.ColorSchemeChanged += (s, e) => {
-            StateHasChanged();
-        };
+        try
+        {
+            await JSHost.ImportAsync("NavMenu",
+            "../Shared/NavMenu.razor.js");
+
+            InitNavbar();
+
+            InitColorModes();
+        }
+        catch (Exception exc)
+        {
+
+        }
     }
-
-    [Parameter]
-    public bool Transparent { get; set; }
 }
-
