--- a/PersonalSite/wwwroot/css/syntax.dark.css
+++ b/PersonalSite/wwwroot/css/syntax.dark.css
@@ -1,9 +1,9 @@
-    .dark code.hljs {
-        color: #fafafa;
-        background-color: #1e293b;
-        border: 0;
-    }
+[data-bs-theme='dark'] code.hljs {
+    color: #fafafa;
+    background-color: #282d36;
+    border: 0;
+}
 
-    .dark .hljs-ln-n {
-        padding-right: 20px;
-    }
+[data-bs-theme='dark'] .hljs-ln-n {
+    padding-right: 20px;
+}
