--- a/PersonalSite/Shared/Footer.razor
+++ b/PersonalSite/Shared/Footer.razor
@@ -1,3 +1,5 @@
+@inject IJSRuntime JS
+
 <footer class="footer py-4 bg-body-tertiary">
     <div class="container py-4 py-md-5 px-4 px-md-3 text-body-secondary">
         <div class="row">
@@ -55,9 +57,16 @@
         </div>
         <div class="mt-4">
             <p class="float-end mb-1">
-                <a id="scrollToTop" href="#">Back to top</a>
+                <a id="scrollToTop" href="#" @onclick="ScrollToTop" @onclick:preventDefault>Back to top</a>
             </p>
             <p class="muted small mb-1">© @DateTime.Now.Year Marina Sundström | Built with .NET & Blazor - Hosted by GitHub Pages</p>
         </div>
     </div>
 </footer>
+
+@code {
+    async Task ScrollToTop() 
+    {
+        await JS.InvokeVoidAsync("scrollToTop");
+    }
+}
